hphp/hack/test/typecheck/class_refinements/validity_checks.php.exp
File "validity_checks.php", line 16, characters 45-45:
Invalid class refinement (Typing[4470])
  File "validity_checks.php", line 16, characters 31-31:
  Class `C` has no constant `T`
File "validity_checks.php", line 17, characters 44-44:
Invalid class refinement (Typing[4470])
  File "validity_checks.php", line 17, characters 31-31:
  Constant `T` in `D` is not a ctx, did you mean type?
